@@ -1,3 +1,9 @@
+Fri Jul 25 17:56:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tools/modeling/codegen/model/Service_T.cpp:
+
+        Fix warnings
+
 Thu Jul 24 21:50:08 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/transport/framework/EntryExit.h:
